# fastply

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  generate_ply.py
example/: CMakeLists.txt  generate_code_and_ply.py  generate_ply.cpp  header_empty_element.json  header_main.json  header_many_types.json  read_large_ply.cpp
include/: fastply.h
src/: CMakeLists.txt  example.cpp
src/include/fastply/: fastply.h
test/: CMakeLists.txt  DataLayout.h  DataLayouts.h  FastPlyTest.cpp
test/test_data/: test_big_endian.ply  test_big_endian.ply.vertex_ascii_data  test_empty_element.ply  test_little_endian.ply  test_little_endian.ply.vertex_ascii_data  test_many.ply  test_no_elements.ply
